--- a/package.json
+++ b/package.json
@@ -1,31 +1,21 @@
 {
-  "name": "my-tube",
+  "name": "imgur",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "antd": "^4.4.3",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
-    "qs": "^6.9.4",
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.2.2",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.2",
-    "react-google-login": "^5.1.21",
-    "react-infinite-scroll-component": "^5.0.5",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-show-more-text": "^1.4.2",
-    "react-simple-image-slider": "^1.0.4",
-    "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
